--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
 <!DOCTYPE html>
 <html>
+<style type="text/css">
+body {background-color:#e6e6fa; color: #191970;}
+h1 {background-color: #191970; color: #e6e6fa;}
+h2 {background-color: #aeaed4; color: #191970;}
+</style>
 	<head>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 		<script src="js/main.js"></script>
@@ -11,6 +16,8 @@
 	</head>
 
 	<body>
+		<h1> Ricky Garcia</h1>
+		<p> This is my web journal! </p>
 		
 	</body>
 
