--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 
 <!DOCTYPE html>
 <html>
-<style type="text/css">
-body {background-color:#e6e6fa; color: #191970;}
-h1 {background-color: #191970; color: #e6e6fa;}
-h2 {background-color: #aeaed4; color: #191970;}
+<style>
+body { background-color:#f4ffe4;
+       color:#333333;
+}
+h1 { background-color:#d5edb3;  
+     color:#5c743d;
+	 height:12px;
+}
+h2 { background-color:#d5edb3;
+     color:#5c743d;
+	padding-left: 10px;
+
+}
+p{
+	padding-left: 10px;
+}
 </style>
 	<head>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -17,7 +29,10 @@ h2 {background-color: #aeaed4; color: #191970;}
 
 	<body>
 		<h1> Ricky Garcia</h1>
+		<h2> ARTS 486 </h2>
 		<p> This is my web journal! </p>
+		<p> This is my third edit</p>
+		<p> I am implenting my previous codes into this project </p>
 		
 	</body>
 
