--- a/index.html
+++ b/index.html
@@ -1,39 +1,92 @@
-<!-- HTML -->
-
 <!DOCTYPE html>
 <html>
-<style>
-body { background-color:#f4ffe4;
-       color:#333333;
-}
-h1 { background-color:#d5edb3;  
-     color:#5c743d;
-	 height:12px;
-}
-h2 { background-color:#d5edb3;
-     color:#5c743d;
-	padding-left: 10px;
-
-}
-p{
-	padding-left: 10px;
-}
-</style>
 	<head>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<!-- scripts -->
 		<script src="js/main.js"></script>
+		<!-- styles -->
 		<link rel="stylesheet" type="text/css" href="css/grid.css">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<!-- SEO -->
+		<meta name="description" content="This is my web journal.">
+		<meta name="author" content="Ricky Garcia">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" type="image/png" href="images/icon.png">
+		<!-- load google fonts -->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,600;1,300;1,500&display=swap" rel="stylesheet">
+		<title>Ricky Garcia : ARTS 486 Web Journal</title>
 	</head>
-
+	
+	
 	<body>
-		<h1> Ricky Garcia</h1>
-		<h2> ARTS 486 </h2>
-		<p> This is my web journal! </p>
-		<p> This is my third edit</p>
-		<p> I am implenting my previous codes into this project </p>
+		<div id="wrapper">
+			<div id="masthead" class="grid">
+				<div id="topnav" class="width-12-12 width-12-12-m">
+					<ul>
+						<li>
+							<div id="logo">
+								<a href="/" title="Ricky">
+	          			<h1>Ricky Garcia</h1>
+	        			</a>
+      				</div>
+						<nav> 
+							<a href="index.html">Home</a> 
+							<a href="about.html">About</a> 
+							<a href="contact.html">Contact</a>
+					</ul>
+				</div>
+			</div>
+			<div id="main" class="grid">
+
+	      <div id="intro" class="width-12-12-m width-12-12">
+	        <div id="intro-holder">
+	        <h1>THIS IS WHERE THE FUN BEGINS</h1>
+	        </div>
+	      </div>
 		
+		<a href="digitalstory.html"> Digital Story Proposal </a>
+
+	      <div id="work" class="width-12-12-m width-12-12">
+	        <h3>Course Work</h3>
+	        <div id="work-holder" class="grid">
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
+	              <img title="Every Single Person" src="images/yes.png" />
+	              <div class="work-inside">
+	                <h2>Project Title</h2>
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	              </div>
+	            </a>
+	          </div>
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
+	              <img title="Every Single Person" src="images/yes.png" />
+	              <div class="work-inside">
+	                <h2>Project Title</h2>
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	              </div>
+	            </a>
+	          </div>
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
+	              <img title="Every Single Person" src="images/yes.png" />
+	              <div class="work-inside">
+	                <h2>Project Title</h2>
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	              </div>
+	            </a>
+	          </div>
+
+	        <div>
+	      </div>
+    	</div>
+			<div id="footer" class="grid">
+	      <div class="width-12-12-m width-12-12">
+	        <p>Copyright ©2022 · Ricky Garcia</p>
+	      </div>
+    </div>
+		</div>
 	</body>
 
 </html>
