--- a/about.html
+++ b/about.html
@@ -3,64 +3,27 @@
 </style>
 <html>
 	<head>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-		<!-- scripts -->
-		<script src="js/main.js"></script>
-		<!-- styles -->
-		<link rel="stylesheet" type="text/css" href="css/grid.css">
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<!-- SEO -->
-		<meta name="description" content="This is my web journal.">
-		<meta name="author" content="Ricky Garcia">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- load google fonts -->
-		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,600;1,300;1,500&display=swap" rel="stylesheet">
-		<title>Ricky Garcia : ARTS 486 Web Journal</title>
-	</head>
-	<body>
-		<div id="wrapper">
-			<div id="masthead" class="grid">
-				<div id="topnav" class="width-12-12 width-12-12-m">
-					<ul>
-						<li>
-							<div id="logo">
-								<a href="/" title="Ricky">
-	          			<h1>Ricky Garcia</h1>
-	        			</a>
-      				</div>
-						</li>
-						<li><a href="about.html">About Me</a></li>
-					</ul>
-				</div>
-			</div>
-			<div id="main" class="grid">
-<div id="page" class="width-12-12-m width-12-12">
-
-	        <div id="page-holder" class="grid">
-
-	          <div class="width-12-12-m width-9-12 page-item">
-	            <h3><a href="">About Me</a></h3>
-	            <p>Hello! I'm Ricky. I'm a fourth year design student at Binghamton University's Harpur College of Arts and Sciences.<p>
-
-	           <p>I have a multidisciplined background in graphic design, fine arts, and medical sciences. I am currently refining my skills to be complete designer in UX/UI, layout design, and product design. I am currently taking ARTS 486, or Computer Graphics, as my special studio project to refine my HTML/CSS/Java in order to pursue my goals of becoming a complete designer.</p>
-
-	           <p>My goal is to become a nursing educator, and to become an advocate for nursing education.</p>
-
-	           
-	          </div>
-
-	        </div>
-
-	      </div>
-	      
-    	</div>
-			<div id="footer" class="grid">
-	      <div class="width-12-12-m width-12-12">
-	        <p>Copyright ©2022 · Ricky Garcia</p>
-	      </div>
-    </div>
+	<title> Ricky's Web Journal </title>
+	<link rel="stylesheet" type="text/css" href="css/grid.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="https://use.typekit.net/qrc2wgp.css">
+</head>
+<body>
+	<div class ="container">
+		<div class="navbar">
+			<nav>
+				<ul>
+							<li> <a href="index.html">Home</a> </li>
+							<li> <a href="about.html">About</a> </li> 
+							<li> <a href="contact.html">Contact</a> </li>
+				</ul>
+			</nav>
 		</div>
-	</body>
 
+	<p>Hello! I'm Ricky. I'm a fourth year design student at Binghamton University's Harpur College of Arts and Sciences.<p>
+	<br>
+	<p>I have a multidisciplined background in graphic design, fine arts, and medical sciences. I am currently refining <br> my skills to be complete designer in UX/UI, layout design, and product design. I am currently taking ARTS 486, <br> or Computer Graphics, as my special studio project to refine my HTML/CSS/Java in order to pursue my goals <br> of becoming a complete designer.</p>
+	<br>
+	<p>My goal is to become a nursing educator, and to become an advocate for nursing education.</p>
 </html>
