--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<ul>
 							<li> <a href="index.html">Home</a> </li>
 							<li> <a href="about.html">About</a> </li> 
-							<li> <a href="contact.html">Contact</a> </li>
+							<li> <a href="journal.html">Web Journal</a> </li>
 				</ul>
 			</nav>
 		</div>
@@ -24,10 +24,6 @@
 		<div class = "galaxy">
 			<h1> A long time ago in a galaxy far, <br> far away...</h1>
 		</div>
-
-
-		<a href="proposal.html"> Star Wars Story Hologron </a>
 	</div>
-
 </body>
 </html>
