--- a/proposal.html
+++ b/proposal.html
@@ -16,7 +16,7 @@
 					<ul>
 								<li> <a href="index.html">Home</a> </li>
 								<li> <a href="about.html">About</a> </li> 
-								<li> <a href="contact.html">Contact</a> </li>
+								<li> <a href="journal.html">Web Journal</a> </li>
 					</ul>
 				</nav>
 			</div>
