--- a/proposal.html
+++ b/proposal.html
@@ -21,26 +21,43 @@
 				</nav>
 			</div>
 
-	
 
-
-	<div class="fade"></div>
-
-	<section class="title">
-	  <div class="crawl">
-	    <div class="title">
-	      <h1>Star Wars Story Hologron</h1>
+	<section class="glitch-container">
+	  <div class="glitches">
+	      <h1>Star Wars Story Hologron: Conspiracy</h1>
+	      <br> 
 	    </div>
 
-	    <p> Throughout the galaxy, there are a great many that have done their part to ensure her safety... and many of them go unrecognized </p>
-	    <p> The likes of Luke Skywalker, the Grand Army of the Republic, the Jedi- all take part in the grand story of the universe </p>
-	    <p> However, the Star Wars Universe has its unsung heroes, and its counterparts that also impact the main story that we know and love. The history of the Mandalorians, the Pyke Syndicate, the Kaminoans (who are indirectly responsible for the creation of the Grand Army of the Republic). There is so much to unpack in the greater Star Wars Universe. 
-	    <p>The Star Wars story is even stretched out in comic books and video games. Video games such as Star Wars: Battlefront II and Star Wars: Fallen Order show the effects of people’s lives during the Galactic Civil War. </p>
-	    <p> Fallen Orders follows a teenager who faces sudden death because he is now exposed as a person of interest because he is a Jedi, who are on the hunt after the collapse of the Republic. Battlefront II follows an Imperial defector who seeks to atone for her sins for aiding and abetting in the destruction of countless star systems as a pawn of the Empire. </p>
-	    <p> There are now shows such as The Mandalorian and the Book of Boba Fett, which are new additions to the Star Wars story. The Mandalorian works great as a standalone story. However, Star Wars fans that have followed the lore since the very beginning will understand why things are. For example, seasoned fans will understand why the galaxy is like the wild west, and what Mandalorians are (because they are introduced and explained in Star Wars: Clone Wars). They will also understand certain references mentioned in the show that are very well hidden in other media. For example, there’s a scene that mentions Operation Cinder. 
-	    <p>However, a casual fan wouldn’t know what Operation Cinder is because it is exclusively mentioned in Battlefront II. For those who get the reference, they will begin to realize how big of a world Star Wars really is. This is the source of inspiration for this. Picking up a show like The Mandalorian is like reading a random chapter from a book. Maybe you will get lucky and get a good story out of one chapter out of many. However, without a direct reference and timeline of what is going on in the universe, eventually you will get stuck. </p>
-		<p>Additionally, there are much more complex concepts that must be shared to experience this series fully. This includes the concept of the Jedi religion, the fall of Mandalore, the rareness of Grogu’s species and what that means for the Star Wars universe.  All this falls into the Star Wars lore. The one way I feel that this can be bridged is through a complete and cohesive timeline. Of course, the timeline will start where it all begins, in my opinion: the prequel trilogy. From there, a web of lore can sprout and be created until we finish into the sequel trilogy, where it all comes together. </p>
-		<p>This chronology is dedicated to the unsung heroes. To the ones who make up the universe just like any other spotlight character </p>
+	    <p> An interesting idea that was explored in the sequel Star Wars trilogy is the return of the Galactic Empire, <br> also known as the First Order. The resemblance of both the Imperial Army and the First Order is remarkably <br> similar, from the armor, to even the name of the soldiers- Stormtroopers. Even the concept of Stormtrooper <br> designations are inherently the same. </p>
+
+	    <br> 
+
+		<p> The point of making is that there is a reason that these two are similar. It was planned. As we find out, <br> Emperor Palpatine created a Contingency Plan to rebuild the Empire should the Rebellion Alliance <br> manage to successfully disintegrate the organization. This is not the first time we’ve seen Palpatine’s <br> genius as we learn that he orchestrated the Clone Wars to rise in the political arena. </p>
+
+		<br> 
+
+		<p> So here’s the juice of the proposal: <p>
+
+		<p> Throughout the prequel trilogies, the animated series, anthologies, and other spin-offs, the rise of the Empire <br> was hinted.It’s easier for viewers to catch it as we see the entire story at multiple perspectives. However, <br> these hints are almost always covered up, or dodged entirely much to the heroes’ chagrin. The was this one <br> point in Star Wars history where the whole plot was inches away from being exposed: the Clones themselves. <br> High ranking soldiers in the Grand Army of the Republic found evidence that they were programmed from <br> birth to be part of something more greater (more sinister, but they did not know that). However, Palpatine’s <br> forces quickly put the investigation to rest. A handful of characters in the universe became loose ends to the <br> plot, but were also shut down. </p>
+
+		<br> 
+
+		<p> My story follows an old wanderer who has followed the plot from the start, and the timeline starts at the <br> collapse of the Empire. He created his own conspiracy theory. He’s an anti-Imperial, and a scrapper and was <br> aware of how suspicious the transition the Republic had to becoming an Empire. His first idea was that <br> Palpatine sabotaged the Republic from the inside. Of course, people thought he was just another lunatic. <br> In one of his scavenging trips, he finds an old Republic cruiser that was shot down as a result of Order 66, <br> (an executive order to mark and execute Jedi for treason). Mind you, the wanderer is a brilliant technology <br>  expert. He revives a shutdown droid from the ship, and it glitches and accidentally opens up an encrypted <br> database full of the secrets that he knew, deep down, were true. </p>
+
+		<br> 
+
+		<p> From there, he decides to embark on a long journey to try to make more sense of what was presented to him. <br> He felt like he was barely scratching the surface, and that there’s more to come. The Empire is coming back. </p>
+
+		<p> I wanted to create a fan story that serves an anthology that shows a grand conspiracy that spans throughout <br> all of Star Wars, and connect them all. This story is inspired by Star Wars: Clone Wars episode, “Conspiracy,” <br> and the Star Wars video game, Fallen Order. </p>
+
+		<br> 
+
+		<p> The layout of the website will resemble a holocron. If not familiar, a holocron is a device that contains encrypted <br> information and can only be opened with the power of the Force. The wanderer does not know he’s a force <br> sensitive individual...yet. This website is a database of his thoughts, and his story on how his journey is going. <br> It will be like a captain’s log, or a journey entry. Within the entries are information he’s gathered that support his <br> claim on the greater conspiracy, and he asks the bigger questions no one is asking. My hope is to connect the dots <br> of the Star Wars conspiracy myself through this character. </p>
+
+		<br> 
+
+		<p> Thank you for reading, and May the Force be with you. </p>
+		<br> 
 	  </div>
 	</section>
 </div>
