Update on Image

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 		<div class = "galaxy">
 			<h1> A long time ago in a galaxy far, <br> far away...</h1>
 		</div>
+
+		<div class ="scattered-secrets">
+			<img src="images/logo.png" alt="logo" class ="center">
+		</div>
+
+
 	</div>
 </body>
 </html>
