--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://use.typekit.net/qrc2wgp.css">
+	<link rel="icon" type="image/png" href="images/icon.png">
 </head>
 <body>
 	<div class ="container">
@@ -19,11 +20,13 @@
 							<li> <a href="journal.html">Web Journal</a> </li>
 				</ul>
 			</nav>
-		</div>
+	</div>
+
 
 	<p>Hello! I'm Ricky. I'm a fourth year design student at Binghamton University's Harpur College of Arts and Sciences.<p>
 	<br>
 	<p>I have a multidisciplined background in graphic design, fine arts, and medical sciences. I am currently refining <br> my skills to be complete designer in UX/UI, layout design, and product design. I am currently taking ARTS 486, <br> or Computer Graphics, as my special studio project to refine my HTML/CSS/Java in order to pursue my goals <br> of becoming a complete designer.</p>
 	<br>
 	<p>My goal is to become a nursing educator, and to become an advocate for nursing education.</p>
+
 </html>
