--- a/journal.html
+++ b/journal.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://use.typekit.net/qrc2wgp.css">
+	<link rel="icon" type="image/png" href="images/icon.png">
 </head>
 <body>
 	<div class ="container">
