--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
 			<img src="images/logo.png" alt="logo" class ="center">
 		</div>
 
+		<div class ="timeline">
+		</div>
 
-	</div>
+
+
+
+
+
+		</div>
 </body>
 </html>
