Holocron Spelling; Change in Animation Speed

--- a/journal.html
+++ b/journal.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<style>
-</style>
 <html>
 	<head>
 	<title> Ricky's Web Journal </title>
@@ -22,7 +20,7 @@
 			</nav>
 		</div>
 
-		<a href="proposal.html"> Star Wars Story Hologron </a>
+		<a href="proposal.html"> Star Wars Story Holocron </a>
 
 	</div>
 </body>
