--- a/proposal.html
+++ b/proposal.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<style>
-</style>
 <html>
 <head>
 	<title> Ricky's Web Journal </title>
@@ -25,7 +23,7 @@
 
 	<div class = "proposal">	
 		<div class = "conspiracy">
-	      <h1>Star Wars Story Hologron: Conspiracy</h1>
+	      <h1>Star Wars Story Holocron: Conspiracy</h1>
 	    </div>
 	      <br> 
 
