--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
 		<div class ="timeline">
 		</div>
 
+		<footer> 
+			<p> Copyright ©2022 Ricky Garcia | This project is fan-made and is NOT affiliated with Lucasfilm or Disney</p> 
+		</footer>
+	</div>
 
-
-
-
-
-		</div>
 </body>
 </html>
