--- a/journal.html
+++ b/journal.html
@@ -21,6 +21,12 @@
 		</div>
 
 		<a href="proposal.html"> Star Wars Story Holocron </a>
+		<br>
+		<a href="storyboard.html"> Storyboard </a>
+
+		<footer> 
+			<p> Copyright ©2022 Ricky Garcia | This project is fan-made and is NOT affiliated with Lucasfilm or Disney</p> 
+		</footer>
 
 	</div>
 </body>
