--- a/database.html
+++ b/database.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 	<div class ="container">
-	<div id="title">
 		<div class="navbar">
 			<nav>
 				<ul>
@@ -22,16 +21,9 @@
 
 
 
-		<div class = "galaxy">
-			<h1> A long time ago in a galaxy far, <br> far away...</h1>
-		</div>
-
-		<div class ="scattered-secrets">
-			<img src="images/logo.png" alt="logo" class ="center">
-		</div>
-
-		<div class ="timeline">
-		</div>
+		
+		<img src="images/ImperialHolo.png" alt="logo" class ="center">
+		
 
 		<footer> 
 			<p> Copyright ©2022 Ricky Garcia | This project is fan-made and is NOT affiliated with Lucasfilm or Disney</p> 
