--- a/database.html
+++ b/database.html
@@ -22,7 +22,9 @@
 
 
 		
-		<img src="images/ImperialHolo.png" alt="logo" class ="center">
+		<div class ="Imperial">
+			<img src="images/ImperialHolo.png" alt="logo" class ="center">
+		</div>
 		
 
 		<footer> 
