--- a/journal.html
+++ b/journal.html
@@ -23,6 +23,9 @@
 		<a href="proposal.html"> Star Wars Story Holocron </a>
 		<br>
 		<a href="storyboard.html"> Storyboard </a>
+		<br>
+		<a href="UI.html"> UI Proposal </a>
+
 
 		<footer> 
 			<p> Copyright ©2022 Ricky Garcia | This project is fan-made and is NOT affiliated with Lucasfilm or Disney</p> 
